kubernetes/base/apps/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8089
      targetPort: 8089
      protocol: TCP
  selector:
    app.kubernetes.io/name: auth-service
